Slightly reduce date font size to prevent overflow
Dates: 2.3vw -> 2.1vw

--- a/styles.css
+++ b/styles.css
@@ -438,7 +438,7 @@ footer {
 
     .week-cell .dates {
         color: black;
-        font-size: 2.3vw !important;
+        font-size: 2.1vw !important;
         white-space: nowrap;
     }
 
